# mgs

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs  status_bar.rs
crates/app/src/widgets/: battry.rs  clock.rs  mod.rs  network.rs  sysinfo.rs  upower.rs  volume.rs  workspace.rs
crates/assets/: Cargo.toml
crates/assets/src/: assets.rs
crates/services/: Cargo.toml  README.md
crates/services/examples/: network.rs  timedate.rs  upower.rs
crates/services/src/: lib.rs
crates/services/src/audio/: mod.rs  sink.rs  sink_input.rs
crates/services/src/hyprland/: mod.rs
crates/services/src/network/: active_connection.rs  device.rs  mod.rs  nm.rs
crates/services/src/network/dbus/: access_point.rs  active_connection.rs  device.rs  mod.rs  nm.rs  settings.rs  statistics.rs
crates/services/src/network/dbus/device/: wired.rs  wireguard.rs  wireless.rs
crates/services/src/sysinfo/: mod.rs
crates/services/src/timedate/: dbus.rs  mod.rs
crates/services/src/upower/: dbus.rs  mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  lib.rs  prelude.rs  stack.rs  ui.rs
crates/ui/src/components/: button.rs  icon.rs  slider.rs  stack.rs
crates/ui/src/traits/: styled_ext.rs
nix/: build.nix  default.nix  shell.nix
src/: main.rs  status_bar.rs
src/ui/: mod.rs  style.rs
src/widgets/: clock.rs  mod.rs  workspace.rs
