[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# gpui = { git = "https://github.com/wuliuqii/zed", branch = "layer-shell" }
gpui = { path = "../zed/crates/gpui/" }
ui = { path = "crates/ui" }
assets = { path = "crates/assets" }
services = { path = "crates/services" }

anyhow = "1.0.95"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-util = { version = "0.3.30", default-features = false }
zbus = "5.5.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = false
opt-level = "z"
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false
