[package]
name = "mgs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mgs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
ui.workspace = true

tokio = { version = "1", features = ["full"] }
hyprland = "0.4.0-beta.2"
chrono = "0.4.39"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
