[package]
name = "mgs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mgs"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
ui.workspace = true
assets.workspace = true
services.workspace = true
tokio.workspace = true
zbus.workspace = true
futures-util.workspace = true

# hyprland = "0.4.0-beta.2"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs.git" }
chrono = "0.4.39"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
