[package]
name = "mgs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mgs"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
ui.workspace = true
assets.workspace = true
services.workspace = true
tokio.workspace = true
zbus.workspace = true
futures.workspace = true
anyhow.workspace = true
futures-util.workspace = true
futures-signals.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

hyprland = "0.4.0-beta.2"
