[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
zbus.workspace = true
futures-signals.workspace = true
tracing.workspace = true
itertools.workspace = true
chrono.workspace = true
hyprland.workspace = true

[dev-dependencies]
tokio.workspace = true
