[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
gpui.workspace = true

smol = "2.0.2"
serde = "1.0.217"
serde_json = "1.0.137"
smallvec = "1.13.2"
anyhow = "1.0.95"
itertools = "0.14.0"
paste = "1.0.15"
regex = "1.11.1"
unicode-segmentation = "1.12.0"
uuid = "1.12.1"
once_cell = "1.20.2"
image = "0.25.5"
